--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,33 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+html::-webkit-scrollbar {
+  width: 0.6rem;
+}
+html::-webkit-scrollbar-track {
+  background-color: #008888;
+  opacity: 0.5;
+}
+
+html::-webkit-scrollbar-thumb {
+  background-color: #161C2D;
+  outline: 1px solid #01baef;
+  border-radius: 6px;
+  width: 0.1rem !important;
+}
+
+#root {
+  width: 100%;
+  min-height: 100vh;
+}
  
 @layer base {
   :root {
